--- a/software/DocCreator/src/GenerateDocument/Assistant.ui
+++ b/software/DocCreator/src/GenerateDocument/Assistant.ui
@@ -60,6 +60,9 @@
      </item>
      <item>
       <widget class="QRadioButton" name="Synthetic">
+       <property name="toolTip">
+        <string>Create document images using text, font and background image as input, then add degradation effects</string>
+       </property>
        <property name="text">
         <string>Synthetic</string>
        </property>
@@ -114,6 +117,9 @@
      </item>
      <item>
       <widget class="QRadioButton" name="Semi">
+       <property name="toolTip">
+        <string>Apply degradation effects to your images</string>
+       </property>
        <property name="text">
         <string>Semi-Synthetic </string>
        </property>
@@ -2396,7 +2402,7 @@
        <x>0</x>
        <y>0</y>
        <width>799</width>
-       <height>185</height>
+       <height>28</height>
       </rect>
      </property>
      <property name="minimumSize">
@@ -3794,16 +3800,16 @@ completePathToOutputDirectory </string>
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroupParamsBlockX"/>
-  <buttongroup name="buttonGroupParamsLeftMargin"/>
-  <buttongroup name="buttonGroupTextGeneration"/>
   <buttongroup name="buttonGroupParamsTopMargin"/>
+  <buttongroup name="buttonGroupText"/>
+  <buttongroup name="buttonGroupParamsRightMargin"/>
+  <buttongroup name="buttonGroupParamsImageSize"/>
+  <buttongroup name="buttonGroupParamsLeftMargin"/>
+  <buttongroup name="buttonGroupParamsBlockX"/>
   <buttongroup name="buttonGroupParamsLineSpacing"/>
+  <buttongroup name="buttonGroupTextGeneration"/>
   <buttongroup name="buttonGroupParamsBottomMargin"/>
   <buttongroup name="buttonGroupParamsBlockY"/>
-  <buttongroup name="buttonGroupParamsRightMargin"/>
   <buttongroup name="buttonGroup"/>
-  <buttongroup name="buttonGroupText"/>
-  <buttongroup name="buttonGroupParamsImageSize"/>
  </buttongroups>
 </ui>
