Improve batche generation UI
- show texts in selected directory (like fonts and backgrounds)
- texts/fonts/backgrounds: sorted in alphabetical order
- texts/fonts/backgrounds: select all by default
- show text for number of items selected not disabled
- add on QWizardPage at the end of text image generation
- add addPath() function to factorize code
- correct one typo
- correct size of an area too small to display text

--- a/software/DocCreator/src/GenerateDocument/Assistant.ui
+++ b/software/DocCreator/src/GenerateDocument/Assistant.ui
@@ -209,68 +209,69 @@
    <property name="subTitle">
     <string>DocCreator</string>
    </property>
-   <widget class="QGroupBox" name="groupBox_2">
+   <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>170</y>
-      <width>451</width>
-      <height>111</height>
+      <x>20</x>
+      <y>10</y>
+      <width>471</width>
+      <height>411</height>
      </rect>
     </property>
-    <property name="title">
-     <string/>
-    </property>
-    <widget class="QWidget" name="layoutWidget_3">
-     <property name="geometry">
-      <rect>
-       <x>2</x>
-       <y>1</y>
-       <width>350</width>
-       <height>92</height>
-      </rect>
-     </property>
-     <layout class="QVBoxLayout" name="verticalLayout_16">
-      <item>
-       <widget class="QLabel" name="label_17">
-        <property name="text">
-         <string>Choose a directory with text files (in UTF-8 format):</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_17">
-        <item>
-         <widget class="QLineEdit" name="txtFilePath">
-          <property name="enabled">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="btnChooseTxtDir">
-          <property name="enabled">
-           <bool>true</bool>
-          </property>
-          <property name="text">
-           <string>...</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_nbTextFiles">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="text">
-         <string>0 text files</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
+    <layout class="QVBoxLayout" name="verticalLayout_16">
+     <item>
+      <widget class="QLabel" name="label_17">
+       <property name="text">
+        <string>Choose a directory with text files (in UTF-8 format):</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_17">
+       <item>
+        <widget class="QLineEdit" name="txtFilePath">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnChooseTxtDir">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QLabel" name="labelST">
+       <property name="text">
+        <string>Select text(s) to use:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QListView" name="listTextView">
+       <property name="selectionMode">
+        <enum>QAbstractItemView::MultiSelection</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_nbTextFiles">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>0 selected text file(s)</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QWizardPage" name="NbRandomTexts">
@@ -369,7 +370,7 @@
      <item>
       <widget class="QLabel" name="label_nbFonts">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="text">
         <string>0 selected font(s)</string>
@@ -438,7 +439,7 @@
      <item>
       <widget class="QLabel" name="label_nbBackgrounds">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="text">
         <string>0 selected background image(s)</string>
@@ -1255,7 +1256,7 @@
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
-         <height>40</height>
+         <height>30</height>
         </size>
        </property>
       </spacer>
@@ -1265,7 +1266,7 @@
        <property name="minimumSize">
         <size>
          <width>40</width>
-         <height>20</height>
+         <height>44</height>
         </size>
        </property>
        <property name="text">
@@ -1286,6 +1287,54 @@
         </size>
        </property>
       </spacer>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QWizardPage" name="ConfirmDegradations">
+   <property name="title">
+    <string/>
+   </property>
+   <property name="subTitle">
+    <string>DocCreator </string>
+   </property>
+   <widget class="QWidget" name="layoutWidgetC">
+    <property name="geometry">
+     <rect>
+      <x>1</x>
+      <y>1</y>
+      <width>521</width>
+      <height>461</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayoutC">
+     <item>
+      <widget class="QLabel" name="ConfirmText">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>200</width>
+         <height>400</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Text images have been generated.
+
+Click Next to continue and apply degradation models to these images.
+Click Cancel otherwise.</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
@@ -3800,16 +3849,16 @@ completePathToOutputDirectory </string>
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroupParamsTopMargin"/>
-  <buttongroup name="buttonGroupText"/>
-  <buttongroup name="buttonGroupParamsRightMargin"/>
-  <buttongroup name="buttonGroupParamsImageSize"/>
-  <buttongroup name="buttonGroupParamsLeftMargin"/>
-  <buttongroup name="buttonGroupParamsBlockX"/>
-  <buttongroup name="buttonGroupParamsLineSpacing"/>
   <buttongroup name="buttonGroupTextGeneration"/>
-  <buttongroup name="buttonGroupParamsBottomMargin"/>
-  <buttongroup name="buttonGroupParamsBlockY"/>
+  <buttongroup name="buttonGroupParamsLeftMargin"/>
   <buttongroup name="buttonGroup"/>
+  <buttongroup name="buttonGroupParamsLineSpacing"/>
+  <buttongroup name="buttonGroupText"/>
+  <buttongroup name="buttonGroupParamsTopMargin"/>
+  <buttongroup name="buttonGroupParamsBottomMargin"/>
+  <buttongroup name="buttonGroupParamsImageSize"/>
+  <buttongroup name="buttonGroupParamsBlockX"/>
+  <buttongroup name="buttonGroupParamsBlockY"/>
+  <buttongroup name="buttonGroupParamsRightMargin"/>
  </buttongroups>
 </ui>
