--- a/software/DocCreator/src/GenerateDocument/Assistant.ui
+++ b/software/DocCreator/src/GenerateDocument/Assistant.ui
@@ -215,7 +215,7 @@
       <x>20</x>
       <y>10</y>
       <width>471</width>
-      <height>411</height>
+      <height>471</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_16">
@@ -260,6 +260,43 @@
         <enum>QAbstractItemView::MultiSelection</enum>
        </property>
       </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_31">
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>10</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="btnSelectTxt">
+         <property name="text">
+          <string>Select all</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnDeselectTxt">
+         <property name="text">
+          <string>Deselect all</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_6">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </item>
      <item>
       <widget class="QLabel" name="label_nbTextFiles">
@@ -319,9 +356,9 @@
     <property name="geometry">
      <rect>
       <x>21</x>
-      <y>90</y>
-      <width>471</width>
-      <height>262</height>
+      <y>40</y>
+      <width>541</width>
+      <height>441</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_17">
@@ -366,6 +403,43 @@
         <enum>QAbstractItemView::MultiSelection</enum>
        </property>
       </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_32">
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>10</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="btnSelectFont">
+         <property name="text">
+          <string>Select all</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnDeselectFont">
+         <property name="text">
+          <string>Deselect all</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_7">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </item>
      <item>
       <widget class="QLabel" name="label_nbFonts">
@@ -435,6 +509,43 @@
         <enum>QAbstractItemView::MultiSelection</enum>
        </property>
       </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_33">
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>10</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="btnSelectBckgd">
+         <property name="text">
+          <string>Select all</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnDeselectBckgd">
+         <property name="text">
+          <string>Deselect all</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_8">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </item>
      <item>
       <widget class="QLabel" name="label_nbBackgrounds">
@@ -1241,7 +1352,7 @@
         <string>Add leading zeros to numbers to have correct lexicographic order</string>
        </property>
        <property name="text">
-        <string>Add zero padding for numbers</string>
+        <string>Add zero padding for numbers (e.g., &quot;image_009&quot; instead of &quot;image_9&quot;)</string>
        </property>
        <property name="checked">
         <bool>true</bool>
@@ -2451,7 +2562,7 @@ Click Cancel otherwise.</string>
        <x>0</x>
        <y>0</y>
        <width>799</width>
-       <height>28</height>
+       <height>185</height>
       </rect>
      </property>
      <property name="minimumSize">
@@ -3849,16 +3960,16 @@ completePathToOutputDirectory </string>
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroupTextGeneration"/>
+  <buttongroup name="buttonGroupParamsLineSpacing"/>
+  <buttongroup name="buttonGroupParamsRightMargin"/>
   <buttongroup name="buttonGroupParamsLeftMargin"/>
   <buttongroup name="buttonGroup"/>
-  <buttongroup name="buttonGroupParamsLineSpacing"/>
-  <buttongroup name="buttonGroupText"/>
   <buttongroup name="buttonGroupParamsTopMargin"/>
   <buttongroup name="buttonGroupParamsBottomMargin"/>
   <buttongroup name="buttonGroupParamsImageSize"/>
-  <buttongroup name="buttonGroupParamsBlockX"/>
+  <buttongroup name="buttonGroupTextGeneration"/>
   <buttongroup name="buttonGroupParamsBlockY"/>
-  <buttongroup name="buttonGroupParamsRightMargin"/>
+  <buttongroup name="buttonGroupText"/>
+  <buttongroup name="buttonGroupParamsBlockX"/>
  </buttongroups>
 </ui>
