--- a/software/DocCreator/src/GenerateDocument/Assistant.ui
+++ b/software/DocCreator/src/GenerateDocument/Assistant.ui
@@ -141,6 +141,67 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QWizardPage" name="ChoiceTextDocument">
+   <property name="subTitle">
+    <string>DocCreator</string>
+   </property>
+   <widget class="QGroupBox" name="groupBoxTD_3">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>170</y>
+      <width>451</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string/>
+    </property>
+    <widget class="QWidget" name="layoutWidgetTD_2">
+     <property name="geometry">
+      <rect>
+       <x>1</x>
+       <y>0</y>
+       <width>438</width>
+       <height>95</height>
+      </rect>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayoutTD_3">
+      <item>
+       <widget class="QLabel" name="labelTD_9">
+        <property name="text">
+         <string>Choose the kind of text documents to generate your documents</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayoutTD_3">
+        <item>
+         <widget class="QRadioButton" name="ClassicTextDocument">
+          <property name="text">
+           <string>Standard text documents</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="FormTextDocument">
+        <property name="text">
+         <string>Form documents</string>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+  </widget>
   <widget class="QWizardPage" name="ChoiceTextType">
    <property name="subTitle">
     <string>DocCreator</string>
@@ -560,6 +621,122 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QWizardPage" name="ChoiceBackgroundsForms">
+   <property name="subTitle">
+    <string>DocCreator</string>
+   </property>
+   <widget class="QWidget" name="layoutWidget_5F">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>721</width>
+      <height>461</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_18F">
+     <item>
+      <widget class="QLabel" name="label_4F">
+       <property name="text">
+        <string>Choose a directory with background images and corresponding blocks (csv) files::</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_19F">
+       <item>
+        <widget class="QLineEdit" name="backgroundPathForms">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnChooseBackgroundDirForms">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_39">
+       <property name="text">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;In this directory, you should have:&lt;/p&gt;&lt;p&gt;- either, a single csv file &lt;span style=&quot; font-style:italic;&quot;&gt;blocks.csv&lt;/span&gt; if you want to have the same blocks for all the background images&lt;/p&gt;&lt;p&gt;- or, for each background image file, a csv file with the same name than the image (e.g., &lt;span style=&quot; font-style:italic;&quot;&gt;img1.csv&lt;/span&gt; for &lt;span style=&quot; font-style:italic;&quot;&gt;img1.png&lt;/span&gt;) if you want different blocks per background image&lt;/p&gt;&lt;p&gt;The csv files should have on each row the coordinates of a block: x, y, width, height.&lt;br/&gt;&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="labelSBF">
+       <property name="text">
+        <string>Select background image(s) to use:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QListView" name="listBackgroundViewForms">
+       <property name="selectionMode">
+        <enum>QAbstractItemView::MultiSelection</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_33F">
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>10</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="btnSelectBckgdForms">
+         <property name="text">
+          <string>Select all</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnDeselectBckgdForms">
+         <property name="text">
+          <string>Deselect all</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_8F">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_nbBackgroundsForms">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>0 selected background image(s) [0 block file found]</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <widget class="QWizardPage" name="PageParams">
    <property name="subTitle">
     <string>DocCreator</string>
@@ -582,7 +759,7 @@
      <rect>
       <x>21</x>
       <y>40</y>
-      <width>600</width>
+      <width>646</width>
       <height>470</height>
      </rect>
     </property>
@@ -1146,6 +1323,13 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QLabel" name="label_34">
+             <property name="text">
+              <string>pixels</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
          <item>
@@ -1162,7 +1346,7 @@
               <string>relative to font height</string>
              </property>
              <property name="checked">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
              <attribute name="buttonGroup">
               <string notr="true">buttonGroupParamsLineSpacing</string>
@@ -1259,12 +1443,357 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QLabel" name="label_37">
+             <property name="text">
+              <string>pixels</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
          <item>
           <layout class="QHBoxLayout" name="hL_14SZ">
            <item>
             <widget class="QRadioButton" name="radioButton_ImageSizeAdaptive">
+             <property name="minimumSize">
+              <size>
+               <width>20</width>
+               <height>20</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>equal to background image size</string>
+             </property>
+             <property name="checked">
+              <bool>false</bool>
+             </property>
+             <attribute name="buttonGroup">
+              <string notr="true">buttonGroupParamsImageSize</string>
+             </attribute>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QWizardPage" name="PageParamsForms">
+   <property name="subTitle">
+    <string>DocCreator</string>
+   </property>
+   <widget class="QLabel" name="label_2F">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>10</y>
+      <width>251</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Set parameters for page generation:</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="layoutWidget_6F">
+    <property name="geometry">
+     <rect>
+      <x>21</x>
+      <y>40</y>
+      <width>650</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="vLayout_6F">
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_41F">
+       <item>
+        <widget class="QLabel" name="label_percentEmptyBlocksForms">
+         <property name="text">
+          <string>percentage of empty blocks: </string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="hl21">
+         <item>
+          <widget class="QRadioButton" name="radioButton_percentEmptyBlocksForms">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="spinBox_percentEmptyBlocksForms">
+           <property name="minimum">
+            <number>0</number>
+           </property>
+           <property name="maximum">
+            <number>100</number>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_31F">
+           <property name="text">
+            <string>%</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_19">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_12F">
+       <item>
+        <widget class="QLabel" name="label_lineSpacingForms">
+         <property name="text">
+          <string>line spacing:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="vvLayout_6F">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_13F">
+           <item>
+            <widget class="QRadioButton" name="radioButton_lineSpacingRandomForms">
+             <property name="minimumSize">
+              <size>
+               <width>20</width>
+               <height>20</height>
+              </size>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="checked">
+              <bool>false</bool>
+             </property>
+             <attribute name="buttonGroup">
+              <string notr="true">buttonGroupParamsLineSpacing</string>
+             </attribute>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_lineSpacingBetweenForms">
+             <property name="text">
+              <string>random value between</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="spinBox_lineSpacingMinForms">
+             <property name="maximum">
+              <number>2000</number>
+             </property>
+             <property name="value">
+              <number>55</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_lineSpacingAndForms">
+             <property name="text">
+              <string>and</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="spinBox_lineSpacingMaxForms">
+             <property name="maximum">
+              <number>2000</number>
+             </property>
+             <property name="value">
+              <number>55</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_35">
+             <property name="text">
+              <string>pixels</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_14F">
+           <item>
+            <widget class="QRadioButton" name="radioButton_lineSpacingFontHeightForms">
+             <property name="minimumSize">
+              <size>
+               <width>20</width>
+               <height>20</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>relative to font height</string>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
+             </property>
+             <attribute name="buttonGroup">
+              <string notr="true">buttonGroupParamsLineSpacing</string>
+             </attribute>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_20">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QHBoxLayout" name="hl_12SZF">
+       <item>
+        <widget class="QLabel" name="label_SZF">
+         <property name="text">
+          <string>image size:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QVBoxLayout" name="vvLayout_6SZF">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_13SZF">
+           <item>
+            <widget class="QRadioButton" name="radioButton_ImageSizeUniformForms">
+             <property name="minimumSize">
+              <size>
+               <width>20</width>
+               <height>20</height>
+              </size>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="checked">
+              <bool>false</bool>
+             </property>
+             <attribute name="buttonGroup">
+              <string notr="true">buttonGroupParamsImageSize</string>
+             </attribute>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_ImageSizeBetweenForms">
+             <property name="minimumSize">
+              <size>
+               <width>165</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>always scaled to width=</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="spinBox_ImageSizeWidthForms">
+             <property name="minimumSize">
+              <size>
+               <width>125</width>
+               <height>20</height>
+              </size>
+             </property>
+             <property name="minimum">
+              <number>5</number>
+             </property>
+             <property name="maximum">
+              <number>9900</number>
+             </property>
+             <property name="value">
+              <number>1006</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_ImageSizeAndForms">
+             <property name="text">
+              <string> height=</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QSpinBox" name="spinBox_ImageSizeHeightForms">
+             <property name="minimumSize">
+              <size>
+               <width>125</width>
+               <height>20</height>
+              </size>
+             </property>
+             <property name="minimum">
+              <number>5</number>
+             </property>
+             <property name="maximum">
+              <number>9900</number>
+             </property>
+             <property name="value">
+              <number>1554</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_38F">
+             <property name="text">
+              <string>pixels</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="hL_14SZF">
+           <item>
+            <widget class="QRadioButton" name="radioButton_ImageSizeAdaptiveForms">
              <property name="minimumSize">
               <size>
                <width>20</width>
@@ -4624,15 +5153,15 @@ completePathToOutputDirectory </string>
  <connections/>
  <buttongroups>
   <buttongroup name="buttonGroupParamsBlockX"/>
-  <buttongroup name="buttonGroupParamsBottomMargin"/>
-  <buttongroup name="buttonGroupParamsRightMargin"/>
   <buttongroup name="buttonGroupParamsImageSize"/>
   <buttongroup name="buttonGroupParamsBlockY"/>
-  <buttongroup name="buttonGroupParamsLineSpacing"/>
   <buttongroup name="buttonGroup"/>
   <buttongroup name="buttonGroupText"/>
-  <buttongroup name="buttonGroupParamsLeftMargin"/>
-  <buttongroup name="buttonGroupParamsTopMargin"/>
   <buttongroup name="buttonGroupTextGeneration"/>
+  <buttongroup name="buttonGroupParamsBottomMargin"/>
+  <buttongroup name="buttonGroupParamsRightMargin"/>
+  <buttongroup name="buttonGroupParamsTopMargin"/>
+  <buttongroup name="buttonGroupParamsLineSpacing"/>
+  <buttongroup name="buttonGroupParamsLeftMargin"/>
  </buttongroups>
 </ui>
